| Summary: | ASTERISK-28817: chan_pjsip: constant DTMF tone if RTP is not setup yet | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2020-04-08 13:59:37 | Date Closed: | 2020-04-13 10:55:30 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 13.32.0 GIT 16.9.0 17.3.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If chan_pjsip is configured for DTMF_RFC_4733, and the core triggers a digit begin before media or rtp has been setup then it's possible the outgoing channel will hear a constant DTMF tone upon answering.
This happens because when there is no media or rtp chan_pjsip notifies the core to initiate inband DTMF. However, upon digit end if media and rtp become available then chan_pjsip does not notify the core to stop inband DTMF. Thus the tone continues playing. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2020-04-13 10:55:31.535-0500 Change 14142 merged by Friendly Automation: chan_pjsip: digit_begin - constant DTMF tone if RTP is not setup yet [https://gerrit.asterisk.org/c/asterisk/+/14142|https://gerrit.asterisk.org/c/asterisk/+/14142] By: Friendly Automation (friendly-automation) 2020-04-13 10:57:56.679-0500 Change 14143 merged by Friendly Automation: chan_pjsip: digit_begin - constant DTMF tone if RTP is not setup yet [https://gerrit.asterisk.org/c/asterisk/+/14143|https://gerrit.asterisk.org/c/asterisk/+/14143] By: Friendly Automation (friendly-automation) 2020-04-13 11:04:35.157-0500 Change 14162 merged by Friendly Automation: chan_pjsip: digit_begin - constant DTMF tone if RTP is not setup yet [https://gerrit.asterisk.org/c/asterisk/+/14162|https://gerrit.asterisk.org/c/asterisk/+/14162] By: Friendly Automation (friendly-automation) 2020-04-13 11:06:44.557-0500 Change 14163 merged by Friendly Automation: chan_pjsip: digit_begin - constant DTMF tone if RTP is not setup yet [https://gerrit.asterisk.org/c/asterisk/+/14163|https://gerrit.asterisk.org/c/asterisk/+/14163] | ||